package edu.fiuba.algo3.modelo.cartas;

public class CartaDesarrollo {

}
