package edu.fiuba.algo3.modelo.comercio;

import edu.fiuba.algo3.modelo.jugador.Jugador;

public interface ComercioJugador {
    void ejecutar(Jugador jugador);
}
