package edu.fiuba.algo3.modelo.construcciones;

import edu.fiuba.algo3.modelo.jugador.Jugador;
import edu.fiuba.algo3.modelo.jugador.Inventario;
import edu.fiuba.algo3.modelo.recursos.Recurso;
import edu.fiuba.algo3.modelo.tablero.EspacioConstruible;

import java.util.List;
import java.util.Set;

public interface Construccion {
    void producir(Recurso recurso);
    void cobrar(Inventario inventario);
    void tieneDePropietarioA(Jugador jugador);
    void ocupar();
    int puntosVictoria();
    void aplicarCambio(Jugador jugador, EspacioConstruible espacio);
    int getIdPropietario();
}
