package edu.fiuba.algo3.modelo.patronTablero;

import edu.fiuba.algo3.modelo.Tablero;
import edu.fiuba.algo3.modelo.terrenos.Terreno;

import java.util.List;

public interface TableroFactory {
    Tablero crearTablero();
}
